--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,12 +1,10 @@
 # These are supported funding model platforms
 
-github: Charmve # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
+github: # Charmve # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
 patreon: # Replace with a single Patreon username
 open_collective: # Replace with a single Open Collective username
 ko_fi: Charmve # Replace with a single Ko-fi username
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
-buymeacoffee: Charmve
-wechat: 'https://image.jiqizhixin.com/uploads/editor/d8595d93-e8c9-4abf-91f4-105384736912/%E5%9B%BE%E7%89%8712.jpg'
 community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
